k8s/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${DEPLOYMENT_NAME}
spec:
  replicas: ${MIN_REPLICAS}
  selector:
    matchLabels:
      app: ${DEPLOYMENT_NAME}
  template:
    metadata:
      labels:
        app: ${DEPLOYMENT_NAME}
    spec:
      serviceAccountName: cloudsql-ksa
      containers:
        - name: cloud-sql-proxy
          # It is recommended to use the latest version of the Cloud SQL proxy
          # Make sure to update on a regular schedule!
          image: gcr.io/cloudsql-docker/gce-proxy:1.27.1
          resources:
            requests:
              memory: ${SQL_PROXY_MEMORY_REQUEST}
              cpu: ${SQL_PROXY_CPU_REQUEST}
            limits:
              memory: ${SQL_PROXY_MEMORY_LIMIT}
              cpu: ${SQL_PROXY_CPU_LIMIT}
          command:
            - '/cloud_sql_proxy'

            # If connecting from a VPC-native GKE cluster, you can use the
            # following flag to have the proxy connect over private IP
            # - "-ip_address_types=PRIVATE"

            # Replace DB_PORT with the port the proxy should listen on
            # Defaults: MySQL: 3306, Postgres: 5432, SQLServer: 1433
            - '-instances=${INSTANCE_CONNECTION_NAME}=tcp:3306'
          securityContext:
            # The default Cloud SQL proxy image runs as the
            # "nonroot" user and group (uid: 65532) by default.
            runAsNonRoot: true
        - name: ${DEPLOYMENT_NAME}
          image: asia.gcr.io/${PROJECT_ID}/${IMAGE}:${TAG}
          resources:
            requests:
              memory: ${MEMORY_REQUEST}
              cpu: ${CPU_REQUEST}
            limits:
              memory: ${MEMORY_LIMIT}
              cpu: ${CPU_LIMIT}
          ports:
            - containerPort: 3001
              name: server
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 20
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 20
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 10
