k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${DEPLOYMENT_NAME}
  labels:
    app: ${DEPLOYMENT_NAME}
spec:
  type: ClusterIP
  selector:
    app: ${DEPLOYMENT_NAME}
  ports:
    - name: http-server
      targetPort: 3001
      port: 3001
